fix(html): fixed a gap where the css var on <html> was out of sync with <body>, not ideal

--- a/src/components/FloatingNav.scss
+++ b/src/components/FloatingNav.scss
@@ -35,6 +35,10 @@
 
   &__subcontent {
     @extend %flexRow;
+
+    .Search__search-icon {
+      fill: var(--color-bg);
+    }
   }
 
   // opacity: 0.5;
